--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@
   }
 
   .wave-1 {
-    @apply aspect-[512/9] bg-[url('svg/WaveTransition.svg')];
+    @apply aspect-[512/9] bg-[url('$lib/svg/WaveTransition.svg')];
   }
 
   .link-nav {
