--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,8 @@
   }
 
   .btn {
-    @apply bg-accent-1 w-fit mx-auto px-4 py-3 rounded-xl text-lg shadow-md flex
-      sm:px-6 sm:py-5 sm:text-xl
+    @apply bg-accent-1 w-fit mx-auto px-4 py-3 rounded-lg text-lg shadow-md flex
+      sm:px-6 sm:py-5 sm:text-xl sm:rounded-xl
       lg:text-2xl
       hover:bg-accent-1-hover hover:scale-[103%] transition-all;
   }
@@ -25,14 +25,22 @@
   .trans-wave {
     @apply w-[110%] bg-no-repeat bg-center bg-cover -mb-1 -mx-4;
   }
-
   .wave-1 {
     @apply aspect-[2560/100] bg-[url('$lib/svg/WaveTransition1.svg')] -mt-10;
   }
-
   .wave-2 {
     @apply aspect-[512/9] bg-[url('$lib/svg/WaveTransition2.svg')] -mt-4;
   }
+  .wave-3 {
+    @apply aspect-[2560/100] bg-[url('$lib/svg/WaveTransition3.svg')] -mt-16;
+  }
+  .wave-3 {
+    @apply aspect-[2560/100] bg-[url('$lib/svg/WaveTransition3.svg')] -mt-16;
+  }
+  .wave-4 {
+    @apply aspect-[512/9] bg-[url('$lib/svg/WaveTransition4.svg')] -mt-16;
+  }
+
 
   .link-nav {
     @apply text-neutral-1 sm:text-xl hover:text-header-1 transition-all;
@@ -41,11 +49,9 @@
   .text-h1 {
     @apply text-center font-medium text-4xl sm:text-5xl lg:text-7xl;
   }
-
   .text-h2 {
     @apply text-center text-xl sm:text-2xl lg:text-3xl;
   }
-
   .text-h3 {
     @apply text-center text-xl lg:text-2xl;
   }
