--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,12 @@
       lg:text-2xl
       hover:bg-accent-1-hover hover:scale-[103%] transition-all;
   }
+  .scroll-fade-in {
+    @apply opacity-0 translate-y-[10%] transition duration-700;
+  }
+  .scroll-fade-in.appear {
+    @apply opacity-100 translate-y-0;
+  }
 
   .trans-wave {
     @apply w-[110%] bg-no-repeat bg-center bg-cover -mb-1 -mx-4;
