Added midi demo video

--- a/src/app.css
+++ b/src/app.css
@@ -53,13 +53,17 @@
   }
 
   .text-h1 {
-    @apply text-center font-medium text-4xl sm:text-5xl lg:text-7xl;
+    @apply text-center font-medium text-4xl sm:text-5xl lg:text-6xl xl:text-7xl;
   }
   .text-h2 {
     @apply text-center text-xl sm:text-2xl lg:text-3xl;
   }
   .text-h3 {
     @apply text-center text-xl lg:text-2xl;
+  }
+
+  .text-p1 {
+    @apply text-lg lg:text-xl;
   }
 }
 
