--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,12 @@
       lg:text-2xl
       hover:bg-accent-1-hover hover:scale-[103%] transition-all;
   }
+  .btn-sm {
+    @apply bg-accent-1 w-fit mx-auto px-4 py-3 rounded-lg text-lg shadow-md flex
+      sm:px-5 sm:py-4 sm:text-lg sm:rounded-xl
+      lg:text-xl
+      hover:bg-accent-1-hover hover:scale-[103%] transition-all;
+  }
   .scroll-fade-in {
     @apply opacity-0 translate-y-[10%] transition duration-700;
   }
@@ -68,7 +74,7 @@
     @apply text-center text-xl sm:text-2xl lg:text-3xl;
   }
   .text-h2-lg {
-    @apply text-center font-medium text-2xl sm:text-3xl lg:text-4xl;
+    @apply text-center md:font-medium text-2xl sm:text-3xl lg:text-4xl;
   }
   .text-h3 {
     @apply text-center text-xl lg:text-2xl;
